--- a/functions.ipynb
+++ b/functions.ipynb
@@ -33,6 +33,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "drorsoft\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'drorsoft'\n",
+    "print(name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,7 +77,7 @@
     "```java\n",
     "private String name = 'alon'; // can't be accessed outside the class \n",
     "public String surname = 'nisser'; // part of the public \"face\"\n",
-    "int customer_age = 30; // this can be only an int\n",
+    "public int customer_age = 30; // this can be only an int\n",
     "\n",
     "```\n",
     "\n",
@@ -77,9 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n",
+      "84\n"
+     ]
+    }
+   ],
    "source": [
     "MAGIC_NUMBER  = 42\n",
     "print(MAGIC_NUMBER)\n",
@@ -98,9 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139646233413872\n",
+      "94170422028704\n",
+      "z: 139646233413872\n"
+     ]
+    }
+   ],
    "source": [
     "x = 'alon'\n",
     "print(id(x))\n",
@@ -115,9 +152,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tamir\n",
+      "139646232731568\n",
+      "139646233413872\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'tamir'\n",
+    "print(x)\n",
+    "print(id(x))\n",
+    "print(id(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139646233040064\n",
+      "139646233072000\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3]\n",
+    "z = [1,2,3]\n",
+    "print(id(l))\n",
+    "print(id(z))\n",
+    "l.append(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = (1,2,3)\n",
+    "x = (1,2,3)\n",
+    "id(t) == id(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139646307538032\n",
+      "139646232257072\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Pecuilar things\n",
     "\n",
@@ -135,35 +248,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "140387320101568"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139646232237376\n",
+      "139646233012928\n"
+     ]
     }
    ],
    "source": [
     "# Lets try arrays\n",
     "\n",
     "l = [1,2,3,4,5]\n",
-    "id(l)\n",
+    "print(id(l))\n",
     "\n",
     "n = [1,2,3,4,5]\n",
-    "id(n)\n",
+    "print(id(n))\n",
     "\n",
     "# Why the difference?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +290,58 @@
     "another.append(6)\n",
     "print(l)\n",
     "# Why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "CAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'cat'\n",
+    "y = x\n",
+    "y = y.upper()\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Passing by value or Passing by reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "a_list = [1,2,3]\n",
+    "another_list = copy.copy(a_list)\n",
+    "another_list.append(4)\n",
+    "print(a_list)\n",
+    "print(another_list)"
    ]
   },
   {
@@ -199,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +392,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3]\n",
+    "l2 = [1,2,3]\n",
+    "l1 is l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 == l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +474,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139646232305872"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def do_upper(name: str)-> str:     \n",
+    "    name = name.upper()\n",
+    "    return name\n",
+    "id(do_upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -248,15 +506,115 @@
        "'KATHULU'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def do_upper(name: str)-> str: \n",
-    "    return name.upper()\n",
     "do_upper('kathulu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KATHULU\n",
+      "kathulu\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'kathulu'\n",
+    "print(do_upper(x))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def do_append(a_list:list):\n",
+    "    a_list.append(2)\n",
+    "\n",
+    "a_list = [0,2]\n",
+    "do_append(a_list)\n",
+    "print(a_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "42\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'another_thingy_i_didnt_use' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-4ad664346483>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manother_thingy_i_didnt_use\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'another_thingy_i_didnt_use' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = 42\n",
+    "def do_things():\n",
+    "    another_thingy_i_didnt_use = 1\n",
+    "    print(another_thingy_i_didnt_use)\n",
+    "    \n",
+    "do_things()\n",
+    "\n",
+    "print(x)\n",
+    "print(another_thingy_i_didnt_use)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139646232305872"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def applier(func, var):\n",
+    "    return func(var)\n",
+    "\n",
+    "id(do_upper)"
    ]
   },
   {
